[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Patrik Hardin <patrik.hardin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    # "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # pyflakes
    "I", # isort
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "Q", # quotes
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "E712",  # Allow using if x == False, as it's not always equivalent to if x.
    "E501",  # Supress line-too-long warnings: trust black's judgement on this one.
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
case-sensitive = true

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
